syntax = "proto3";

import "Protos/utils.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcClient";

package tarot;

service Hand {
  rpc GetHandById (IdRequest) returns (HandReply);
  rpc InsertHand (HandInsertRequest) returns (HandReply);
  rpc UpdateHand (HandUpdateRequest) returns (HandReply);
  rpc DeleteHand (IdRequest) returns (BoolResponse);
}

message HandReply {
  uint64 id = 1;
  int32 number = 2;
  string rules = 3;
  google.protobuf.Timestamp date = 4;
  int32 taker_score = 5;
  optional bool excuse = 6;
  PETIT_RESULT petit = 7;
  CHELEM chelem = 8;
  repeated UserBiddingPoignee biddings = 9;
}

message HandInsertRequest {
  uint64 id = 1;
}

message HandUpdateRequest {
  uint64 id = 1;
}